# SearchEngine

./: .gitignore  CMakeLists.txt  README.md
Include/: ConverterJSON.h  EngineExceptions.h  InvertedIndex.h  SearchServer.h  tests.h
Json_files/: CMakeLists.txt  answers.json  config.json  requests.json
Resources/: Document_0.txt  Document_1.txt  Document_2.txt  Document_3.txt  Document_4.txt  Document_5.txt  Document_6.txt  Document_7.txt  Document_8.txt  Document_9.txt
Source/: CMakeLists.txt  ConverterJSON.cpp  EngineExceptions.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
googletest-1.16.0/: googletest-distribution.cbp
googletest-1.16.0/googlemock/: gmock.cbp
googletest-1.16.0/googletest/: gtest.cbp
nlohmann_json/docs/mkdocs/docs/integration/: package_managers.md
